Fix jumbrotron spacing

--- a/style.sass
+++ b/style.sass
@@ -81,8 +81,9 @@ body
   text-decoration: $underline
 
 #rtwo
-  padding-right: 1rem
   underline: $underline
+.space 
+  word-spacing: 1rem
 
 figcaption
   margin-top: 0
